src/components/Header/Header.scss
.Header {
  &__container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    padding: 2rem;
  }

  &__brand {
    flex-grow: 1;
    font-size: 1.25rem;

    @media(min-width: 480px) {
      font-size: 1.6rem;
    }
  }

  &__title {
    font-size: 1.5em;
    margin: 0;
  }

  &__link {
    padding: 1rem;
  }

}

